--- a/style.css
+++ b/style.css
@@ -1,6 +1,15 @@
+* {
+  margin: 0;
+}
+
 html,
 body {
+  --black: hsl(240, 6%, 13%);
+  --gray: hsl(240, 9%, 89%);
+
   height: 100%;
+  font-family: 'Roboto', sans-serif;
+  -webkit-font-smoothing: antialiased;
 }
 
 body {
@@ -18,15 +27,51 @@ main {
   max-width: 250px;
   margin-left: auto;
   margin-right: auto;
+  text-align: center;
+}
+
+.avatar {
+  width: 10rem;
+  margin: 11.5rem auto 0;
+  position: relative;
+}
+
+.avatar span {
+  position: absolute;
+  top: -15px;
+  z-index: 1;
+}
+
+.avatar > img {
+  width: 10rem;
+  height: 11.5rem;
+  object-fit: cover;
+  clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
 }
 
 h1 {
+  color: var(--gray);
   font-size: 1.5rem;
+  margin-top: 1.5rem;
 }
 
 a {
-  color: rgb(73, 62, 62);
+  color: var(--gray);
   text-decoration: none;
+  margin-top: 0.25rem;
+}
+
+p {
+  margin-top: 2rem;
+}
+
+ul {
+  margin-top: 4rem;
+  list-style: none;
+  padding: 0;
+  display: flex;
+  gap: 0.8rem;
+  justify-content: center;
 }
 
 .content {
