--- a/style.css
+++ b/style.css
@@ -59,9 +59,13 @@ a {
   color: var(--gray);
   text-decoration: none;
   margin-top: 0.25rem;
+  display: flex;
+  gap: 0.75rem;
+  justify-content: center;
 }
 
 p {
+  color: var(--gray);
   margin-top: 2rem;
 }
 
